vendor/pin-project-1.0.7/tests/ui/pin_project/unpin_sneaky.rs
use pin_project::pin_project;

#[pin_project]
struct S {
    #[pin]
    f: u8,
}

impl Unpin for __S {} //~ ERROR E0412,E0321

fn main() {}
